# IDE-vim-tmux-cmake-gdb-cpp

./: IDE-vim-tmux-cmake-cpp  README.md
source/template/: CMakeLists.txt  compile_flags.txt  main.cpp  tmux.gdb.conf  vimrc
