cmake_minimum_required(VERSION 3.18 FATAL_ERROR)

project(PROJECT_NAME_FOR_IDE_CONFIGURATION)

set(CMAKE_INSTALL_PREFIX CMAKE_INSTALL_PREFIX_IDE_CONFIGURATION)
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)

set(DEBUG true)

if(DEBUG)
    set(CMAKE_CXX_FLAGS "-g CMAKE_CXX_FLAGS_IDE_CONFIGURATION")
    set(EXECUTABLE_OUTPUT_PATH ${CMAKE_INSTALL_PREFIX}/${PROJECT_NAME}/build/debug)
else()
    set(CMAKE_CXX_FLAGS "CMAKE_CXX_FLAGS_IDE_CONFIGURATION")
    set(EXECUTABLE_OUTPUT_PATH ${CMAKE_INSTALL_PREFIX}/${PROJECT_NAME}/build/release)
endif()

file(GLOB SOURCES "./*.cpp")

add_executable(${PROJECT_NAME} ${SOURCES})
add_custom_command(
    TARGET ${PROJECT_NAME} POST_BUILD
    COMMAND echo "${EXECUTABLE_OUTPUT_PATH}/${PROJECT_NAME}\\necho \"\\n${EXECUTABLE_OUTPUT_PATH}/${PROJECT_NAME} returned \$?\"" > run.sh
    VERBATIM)
